# serializer version: 1
# name: test_select_ok[select_as_struct][sql]
  'SELECT AS STRUCT column1 FROM table1'
# ---
# name: test_select_ok[select_as_struct][tree]
  '''
  query_expr
    select
      select_shape	STRUCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_value][sql]
  'SELECT AS VALUE column1 FROM table1'
# ---
# name: test_select_ok[select_as_value][tree]
  '''
  query_expr
    select
      select_shape	VALUE
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_distinct][sql]
  'SELECT DISTINCT column1 FROM table1'
# ---
# name: test_select_ok[select_distinct][tree]
  '''
  query_expr
    select
      select_mode	DISTINCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_dot_star_except][sql]
  'SELECT struct_column.* EXCEPT(column1, column2) FROM table1'
# ---
# name: test_select_ok[select_dot_star_except][tree]
  '''
  query_expr
    select
      select_list
        select_dot_star
          ident	struct_column
          select_except
            select_except_list
              select_except_list
                select_except_item
                  ident	column1
              select_except_item
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_dot_star_replace][sql]
  'SELECT struct_column.* REPLACE(1 AS column1, 2 AS column2) FROM table1'
# ---
# name: test_select_ok[select_dot_star_replace][tree]
  '''
  query_expr
    select
      select_list
        select_dot_star
          ident	struct_column
          select_replace
            select_replace_list
              select_replace_list
                select_replace_item
                  integer_literal	1
                  ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_from_alias_explicit][sql]
  'SELECT column1 FROM table1 AS alias1'
# ---
# name: test_select_ok[select_from_alias_explicit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_alias_implicit][sql]
  'SELECT column1 FROM table1 alias1'
# ---
# name: test_select_ok[select_from_alias_implicit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_time_travel][sql]
  "SELECT column1 FROM table1 FOR SYSTEM_TIME AS OF '1970-01-01'"
# ---
# name: test_select_ok[select_from_time_travel][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          time_travel
            string_literal	'1970-01-01'
  
  '''
# ---
# name: test_select_ok[select_list_alias_explicit][sql]
  'SELECT column1 AS alias1 FROM table1'
# ---
# name: test_select_ok[select_list_alias_explicit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_alias_implicit][sql]
  'SELECT column1 alias1 FROM table1'
# ---
# name: test_select_ok[select_list_alias_implicit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_multi][sql]
  'SELECT column1, column2 FROM table1'
# ---
# name: test_select_ok[select_list_multi][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
        select_expr
          ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_single][sql]
  'SELECT column1 FROM table1'
# ---
# name: test_select_ok[select_list_single][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_trailing_comma][sql]
  'SELECT column1, FROM table2'
# ---
# name: test_select_ok[select_list_trailing_comma][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table2
  
  '''
# ---
# name: test_select_ok[select_literal][sql]
  'SELECT 1'
# ---
# name: test_select_ok[select_literal][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_select_ok[select_star][sql]
  'SELECT * FROM table1'
# ---
# name: test_select_ok[select_star][tree]
  '''
  query_expr
    select
      select_list
        select_star
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_except][sql]
  'SELECT * EXCEPT(column1, column2) FROM table1'
# ---
# name: test_select_ok[select_star_except][tree]
  '''
  query_expr
    select
      select_list
        select_star
          select_except
            select_except_list
              select_except_list
                select_except_item
                  ident	column1
              select_except_item
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_replace][sql]
  'SELECT * REPLACE(1 AS column1, 2 AS column2) FROM table1'
# ---
# name: test_select_ok[select_star_replace][tree]
  '''
  query_expr
    select
      select_list
        select_star
          select_replace
            select_replace_list
              select_replace_list
                select_replace_item
                  integer_literal	1
                  ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped][sql]
  'SELECT column1.* FROM table1'
# ---
# name: test_select_ok[select_star_scoped][tree]
  '''
  query_expr
    select
      select_list
        select_dot_star
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped_nested][sql]
  'SELECT column1.column2.* FROM table1'
# ---
# name: test_select_ok[select_star_scoped_nested][tree]
  '''
  query_expr
    select
      select_list
        select_dot_star
          path_expression
            ident	column1
            ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_subqueries][sql]
  '''
  SELECT
      *,
      column1,
      (SELECT 1) AS column2
  FROM
      (SELECT column7 FROM table2) AS alias2
  '''
# ---
# name: test_select_ok[select_subqueries][tree]
  '''
  query_expr
    select
      select_list
        select_star
        select_expr
          ident	column1
        select_expr
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
          as_alias
            ident	column2
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column7
                from_clause
                  from_item_table
                    path_expression
                      ident	table2
          as_alias
            ident	alias2
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery][sql]
  'SELECT column1 FROM (SELECT column1 FROM table1)'
# ---
# name: test_subquery_ok[select_from_subquery][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased][sql]
  'SELECT column1 FROM (SELECT column1 FROM table1) AS table2'
# ---
# name: test_subquery_ok[select_from_subquery_aliased][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
          as_alias
            ident	table2
  
  '''
# ---
# name: test_subquery_ok[subquery][sql]
  '(SELECT 1)'
# ---
# name: test_subquery_ok[subquery][tree]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              integer_literal	1
  
  '''
# ---
# name: test_subquery_ok[subquery_nested][sql]
  '(SELECT (SELECT (SELECT 1)))'
# ---
# name: test_subquery_ok[subquery_nested][tree]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              subquery
                query_expr
                  select
                    select_list
                      select_expr
                        subquery
                          query_expr
                            select
                              select_list
                                select_expr
                                  integer_literal	1
  
  '''
# ---
# name: test_unnest_ok[unnest][sql]
  'SELECT column1 FROM UNNEST(array1)'
# ---
# name: test_unnest_ok[unnest][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_alias][sql]
  'SELECT column1 FROM UNNEST(array1) AS alias1'
# ---
# name: test_unnest_ok[unnest_alias][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_unnest_ok[unnest_alias_with_offset_alias][sql]
  'SELECT column1 FROM UNNEST(array1) AS alias1 WITH OFFSET AS alias2'
# ---
# name: test_unnest_ok[unnest_alias_with_offset_alias][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
          from_unnest_offset_expr
            as_alias
              ident	alias2
  
  '''
# ---
# name: test_unnest_ok[unnest_with_offset][sql]
  'SELECT column1 FROM UNNEST(array1) WITH OFFSET'
# ---
# name: test_unnest_ok[unnest_with_offset][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          from_unnest_offset_expr
  
  '''
# ---
# name: test_unnest_ok[unnest_with_offset_alias][sql]
  'SELECT column1 FROM UNNEST(array1) WITH OFFSET AS alias1'
# ---
# name: test_unnest_ok[unnest_with_offset_alias][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          from_unnest_offset_expr
            as_alias
              ident	alias1
  
  '''
# ---
